--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   },
   "private": true,
   "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh"
+    "start": "node_modules/react-native/packager/packager.sh",
+    "webpack": "babel-node webpack-watch"
   },
   "devDependencies": {
+    "babel": "^5.4.3",
+    "babel-core": "^5.4.3",
     "babel-eslint": "^3.1.4",
+    "babel-loader": "^5.1.2",
+    "babel-runtime": "^5.4.3",
     "eslint": "^0.21.1",
-    "eslint-plugin-react": "^2.3.0"
+    "eslint-plugin-react": "^2.3.0",
+    "node-libs-browser": "^0.5.0",
+    "supports-color": "^1.3.1",
+    "webpack": "^1.9.6"
   }
 }
