--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "geohashing",
   "version": "0.0.1",
   "dependencies": {
+    "geo-graticule": "^2.0.3",
+    "geohash-coordinates": "^1.1.2",
+    "lodash": "^3.8.0",
     "react-native": "^0.4.4"
   },
   "private": true,
@@ -12,13 +15,14 @@
   "devDependencies": {
     "babel": "^5.4.3",
     "babel-core": "^5.4.3",
-    "babel-eslint": "^3.1.4",
+    "babel-eslint": "^3.1.5",
     "babel-loader": "^5.1.2",
     "babel-runtime": "^5.4.3",
-    "eslint": "^0.21.1",
+    "eslint": "^0.21.2",
     "eslint-plugin-react": "^2.3.0",
+    "json-loader": "^0.5.1",
     "node-libs-browser": "^0.5.0",
     "supports-color": "^1.3.1",
-    "webpack": "^1.9.6"
+    "webpack": "^1.9.7"
   }
 }
