--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "lodash": "^3.8.0",
     "react-native": "^0.4.4"
   },
-  "private": true,
-  "scripts": {
-    "start": "node_modules/react-native/packager/packager.sh",
-    "webpack": "babel-node webpack-watch"
-  },
   "devDependencies": {
     "babel": "^5.4.3",
     "babel-core": "^5.4.3",
@@ -22,7 +17,17 @@
     "eslint-plugin-react": "^2.3.0",
     "json-loader": "^0.5.1",
     "node-libs-browser": "^0.5.0",
+    "precommit-hook": "^2.0.1",
     "supports-color": "^1.3.1",
     "webpack": "^1.9.7"
+  },
+  "pre-commit": [
+    "lint"
+  ],
+  "private": true,
+  "scripts": {
+    "lint": "eslint .",
+    "start": "node_modules/react-native/packager/packager.sh",
+    "webpack": "babel-node webpack-watch"
   }
 }
