--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "geohashing",
+  "description": "A geohashing app for iOS built with React Native",
   "version": "0.0.1",
   "dependencies": {
     "geo-graticule": "^2.0.3",
@@ -21,6 +22,7 @@
     "supports-color": "^1.3.1",
     "webpack": "^1.9.7"
   },
+  "main": "webpack-watch.js",
   "pre-commit": [
     "lint"
   ],
