--- a/package.json
+++ b/package.json
@@ -3,25 +3,29 @@
   "description": "A geohashing app for iOS built with React Native",
   "version": "0.0.1",
   "dependencies": {
-    "flummox": "^4.0.0-alpha2",
+    "flummox": "^4.0.0-rc1",
     "geo-graticule": "^2.0.3",
     "geohash-coordinates": "^1.1.2",
-    "lodash": "^3.8.0",
+    "lodash": "^3.9.3",
     "react-native": "^0.4.4"
   },
   "devDependencies": {
-    "babel": "^5.4.3",
-    "babel-core": "^5.4.3",
-    "babel-eslint": "^3.1.5",
-    "babel-loader": "^5.1.2",
-    "babel-runtime": "^5.4.3",
-    "eslint": "^0.21.2",
-    "eslint-plugin-react": "^2.3.0",
-    "json-loader": "^0.5.1",
-    "node-libs-browser": "^0.5.0",
+    "babel": "^5.5.8",
+    "babel-core": "^5.5.8",
+    "babel-eslint": "^3.1.15",
+    "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.5.8",
+    "eslint": "^0.22.1",
+    "eslint-plugin-react": "^2.5.0",
+    "json-loader": "^0.5.2",
+    "node-libs-browser": "^0.5.2",
     "precommit-hook": "^2.0.1",
+    "react": "^0.13.3",
+    "react-hot-loader": "^1.2.7",
+    "react-native-webpack-server": "^0.2.0",
     "supports-color": "^1.3.1",
-    "webpack": "^1.9.7"
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
   "main": "webpack-watch.js",
   "pre-commit": [
@@ -30,7 +34,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "start": "node_modules/react-native/packager/packager.sh",
-    "webpack": "babel-node webpack-watch"
+    "start": "npm run webpack-config && babel-node lib/release && HOT=1 react-native-webpack-server start --hot",
+    "webpack-config": "babel webpack.config.es6 --out-file webpack.config.js",
+    "build": "npm run webpack-config && NODE_ENV=production react-native-webpack-server start && NODE_ENV=production babel-node lib/release"
   }
 }
