--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "private": true,
   "scripts": {
     "build": "npm run webpack-config && NODE_ENV=production react-native-webpack-server start",
-    "lint": "eslint .",
+    "lint": "eslint --ext .js,.es6 .",
     "release": "NODE_ENV=production babel-node lib/release && echo 'Open Xcode and build for device'",
     "reset-dev": "NODE_ENV=development babel-node lib/release",
     "start": "npm run webpack-config && npm run reset-dev && HOT=1 react-native-webpack-server start --hot",
