--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "geo-graticule": "^2.0.3",
     "geohash-coordinates": "^1.1.2",
     "lodash": "^3.9.3",
-    "react-native": "^0.4.4"
+    "react-native": "^0.4.4",
+    "react-native-button": "^1.2.0"
   },
   "devDependencies": {
     "async": "^1.2.1",
