--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-native": "^0.4.4",
     "react-native-button": "^1.2.0",
     "react-native-drawer": "^1.1.2",
+    "react-native-icons": "0.0.8",
     "zero-fill": "^2.2.1"
   },
   "devDependencies": {
