--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "no-mixed-spaces-and-tabs": 2,
     "spaced-line-comment": [2, "always"],
     "quotes": [2, "single"],
+    "strict": [2, "never"],
     "indent": [2, 2],
     "no-trailing-spaces": 2,
     "no-underscore-dangle": 0,
