--- a/package.json
+++ b/package.json
@@ -1,49 +1,36 @@
 {
   "name": "geohashing",
   "description": "A geohashing app for iOS built with React Native",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "dependencies": {
     "geo-graticule": "^2.0.3",
     "geohash-coordinates": "^1.1.2",
-    "lodash": "^3.9.3",
-    "react-native": "^0.4.4",
+    "lodash": "^3.10.0",
+    "react-native": "^0.8.0",
     "react-native-button": "^1.2.0",
-    "react-native-drawer": "^1.1.2",
-    "react-native-icons": "0.0.8",
-    "react-native-reverse-geo": "0.0.6",
+    "react-native-drawer": "^1.2.4",
+    "react-native-icons": "^0.2.0",
     "zero-fill": "^2.2.1"
   },
   "devDependencies": {
-    "async": "^1.2.1",
-    "babel": "^5.5.8",
-    "babel-core": "^5.5.8",
-    "babel-eslint": "^3.1.15",
-    "babel-loader": "^5.1.4",
-    "babel-runtime": "^5.5.8",
-    "eslint": "^0.22.1",
-    "eslint-plugin-react": "^2.5.0",
-    "json-loader": "^0.5.2",
-    "node-libs-browser": "^0.5.2",
-    "precommit-hook": "^2.0.1",
-    "react": "^0.13.3",
-    "react-hot-loader": "^1.2.7",
-    "react-native-webpack-server": "^0.2.0",
-    "supports-color": "^1.3.1",
-    "webpack": "^1.9.10",
-    "webpack-dev-server": "^1.9.0"
+    "async": "^1.4.0",
+    "babel": "^5.8.5",
+    "babel-eslint": "^4.0.0",
+    "eslint": "^0.24.1",
+    "eslint-plugin-react": "^3.0.0",
+    "precommit-hook": "^3.0.0"
   },
-  "main": "webpack-watch.js",
+  "main": "index.ios.js",
   "pre-commit": [
-    "lint"
+    "lint",
+    "validate"
   ],
   "private": true,
   "scripts": {
-    "build": "npm run webpack-config && NODE_ENV=production react-native-webpack-server start",
-    "lint": "eslint --ext .js,.es6 .",
+    "lint": "eslint .",
     "release": "NODE_ENV=production babel-node lib/release && echo 'Open Xcode and build for device'",
-    "reset-dev": "NODE_ENV=development babel-node lib/release",
-    "start": "npm run webpack-config && npm run reset-dev && HOT=1 react-native-webpack-server start --hot",
-    "webpack-config": "babel webpack.config.es6 --out-file webpack.config.js",
+    "start": "NODE_ENV=development babel-node lib/release && ./node_modules/react-native/packager/packager.sh -root .",
+    "validate": "npm ls",
     "xcode": "open ./geohashing.xcodeproj"
   }
 }
