--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "lodash": "^3.10.0",
     "react-native": "^0.8.0",
     "react-native-button": "^1.2.0",
-    "react-native-drawer": "^1.2.4",
-    "react-native-icons": "^0.2.0",
+    "react-native-drawer": "^1.2.6",
+    "react-native-geocoder": "^0.1.3",
+    "react-native-icons": "^0.3.0",
     "zero-fill": "^2.2.1"
   },
   "devDependencies": {
     "async": "^1.4.0",
-    "babel": "^5.8.5",
-    "babel-eslint": "^4.0.0",
+    "babel": "^5.8.19",
+    "babel-eslint": "^4.0.5",
     "eslint": "^0.24.1",
-    "eslint-plugin-react": "^3.0.0",
+    "eslint-plugin-react": "^3.1.0",
     "precommit-hook": "^3.0.0"
   },
   "main": "index.ios.js",
