--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "babel-eslint": "^4.0.5",
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^3.1.0",
-    "precommit-hook": "^3.0.0"
+    "precommit-hook": "^3.0.0",
+    "react-native-blur": "^0.5.4",
+    "react-native-overlay": "^0.2.8"
   },
   "main": "index.ios.js",
   "pre-commit": [
