--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native-drawer": "^1.2.6",
     "react-native-geocoder": "^0.1.3",
     "react-native-icons": "^0.3.0",
+    "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.1"
   },
   "devDependencies": {
