--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "geohash-coordinates": "^1.1.2",
     "lodash": "^3.10.0",
     "react-native": "^0.8.0",
+    "react-native-blur": "^0.5.4",
     "react-native-button": "^1.2.0",
     "react-native-drawer": "^1.2.6",
     "react-native-geocoder": "^0.1.3",
@@ -20,9 +21,7 @@
     "babel-eslint": "^4.0.5",
     "eslint": "^0.24.1",
     "eslint-plugin-react": "^3.1.0",
-    "precommit-hook": "^3.0.0",
-    "react-native-blur": "^0.5.4",
-    "react-native-overlay": "^0.2.8"
+    "precommit-hook": "^3.0.0"
   },
   "main": "index.ios.js",
   "pre-commit": [
