--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "dependencies": {
     "geo-graticule": "^2.0.3",
     "geohash-coordinates": "^1.1.2",
-    "lodash": "^3.10.0",
+    "lodash": "^3.10.1",
     "react-native": "^0.8.0",
     "react-native-blur": "^0.5.4",
     "react-native-button": "^1.2.0",
     "react-native-drawer": "^1.2.6",
-    "react-native-geocoder": "^0.1.3",
-    "react-native-icons": "^0.3.0",
+    "react-native-geocoder": "^0.1.4",
+    "react-native-icons": "^0.3.4",
     "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.1"
   },
   "devDependencies": {
-    "async": "^1.4.0",
-    "babel": "^5.8.19",
+    "@lukekarrys/eslint-config": "^1.0.6",
+    "async": "^1.4.2",
+    "babel": "^5.8.21",
     "babel-eslint": "^4.0.5",
-    "eslint": "^0.24.1",
-    "eslint-plugin-react": "^3.1.0",
+    "eslint": "^1.1.0",
+    "eslint-plugin-classes": "0.0.4",
+    "eslint-plugin-react": "^3.2.2",
     "precommit-hook": "^3.0.0"
   },
   "main": "index.ios.js",
