--- a/package.json
+++ b/package.json
@@ -4,39 +4,41 @@
   "version": "1.0.0",
   "dependencies": {
     "geo-graticule": "^2.0.3",
-    "geohash-coordinates": "^1.1.2",
+    "geohash-coordinates": "^1.1.3",
     "lodash": "^3.10.1",
-    "react-native": "^0.8.0",
-    "react-native-blur": "^0.5.4",
-    "react-native-button": "^1.2.0",
-    "react-native-drawer": "^1.2.6",
+    "react-native": "^0.16.0",
+    "react-native-blur": "^0.7.6",
+    "react-native-button": "^1.3.1",
+    "react-native-drawer": "^1.10.1",
     "react-native-geocoder": "^0.1.4",
-    "react-native-icons": "^0.3.4",
+    "react-native-icons": "^0.7.0",
     "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.1"
   },
   "devDependencies": {
-    "@lukekarrys/eslint-config": "^1.0.32",
-    "async": "^1.4.2",
-    "babel": "^5.8.21",
-    "babel-eslint": "^5.0.0-beta4",
+    "@lukekarrys/eslint-config": "^1.0.36",
+    "babel-eslint": "^5.0.0-beta6",
     "eslint": "^1.10.3",
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-react": "^3.11.3",
     "precommit-hook": "^3.0.0"
   },
-  "main": "index.ios.js",
+  "enginges": {
+    "node": "^5.0.0"
+  },
+  "main": "README.md",
   "pre-commit": [
     "lint",
     "validate"
   ],
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development babel-node lib/release",
     "lint": "eslint .",
-    "release": "NODE_ENV=production babel-node lib/release && echo 'Open Xcode and build for device' && npm run xcode",
-    "start": " ./node_modules/react-native/packager/packager.sh -root .",
-    "validate": "npm ls",
-    "xcode": "open ./geohashing.xcodeproj"
+    "packager": "./node_modules/react-native/packager/packager.sh",
+    "postinstall": "npm run rm.babelrc && npm run rm.jshint",
+    "rm.babelrc": "find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm",
+    "rm.jshint": "find . -type f -name '.jshint*' -maxdepth 1 | xargs rm",
+    "validate": "npm ls >/dev/null",
+    "xcode": "open ./ios/geohashing.xcodeproj"
   }
 }
