--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
   ],
   "private": true,
   "scripts": {
-    "bundle": "npm run bundle.ios && npm run bundle.android",
-    "bundle.android": "echo 'Not building Android'",
-    "bundle.ios": "NODE_ENV=production react-native bundle --entry-file index.ios.js --platform ios --dev false --bundle-output ios/geohashing/main.jsbundle && node lib/release",
+    "bundle": "npm run bundle.ios",
+    "bundle.ios": "NODE_ENV=production react-native bundle --entry-file index.ios.js --platform ios --dev false --bundle-output ios/geohashing/main.jsbundle && NODE_ENV=production node lib/release",
     "lint": "eslint .",
     "postinstall": "npm run rm.babelrc && npm run rm.jshint",
     "rm.babelrc": "find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm",
