--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "@lukekarrys/eslint-config"
+  "extends": "@lukekarrys/eslint-config",
+
+  "rules": {
+    // https://github.com/babel/babel-eslint/issues/249
+    "no-use-before-define": 0
+  }
 }
