--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-native-button": "^1.4.2",
     "react-native-drawer": "^1.16.5",
     "react-native-geocoder": "^0.3.1",
-    "react-native-icons": "^0.7.1",
+    "react-native-vector-icons": "^1.1.1",
     "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.2"
   },
