--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "zero-fill": "^2.2.2"
   },
   "devDependencies": {
-    "@lukekarrys/eslint-config": "^2.0.3",
-    "babel-eslint": "^5.0.0-beta10",
+    "@lukekarrys/eslint-config": "^2.0.8",
+    "babel-eslint": "^5.0.0",
     "eslint": "^2.0.0",
     "eslint-plugin-classes": "^0.1.1",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-react": "^4.0.0-rc.1",
     "precommit-hook": "^3.0.0"
   },
   "enginges": {
