--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "dependencies": {
     "geo-graticule": "^2.0.3",
     "geohash-coordinates": "^1.1.3",
-    "lodash": "^4.3.0",
+    "lodash": "^4.6.1",
     "react-native": "^0.19.0",
     "react-native-blur": "^0.7.10",
     "react-native-button": "^1.4.2",
-    "react-native-drawer": "^1.16.5",
+    "react-native-drawer": "^1.16.7",
     "react-native-geocoder": "^0.3.1",
-    "react-native-vector-icons": "^1.1.1",
+    "react-native-vector-icons": "^1.3.2",
     "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.2"
   },
   "devDependencies": {
-    "@lukekarrys/eslint-config": "^2.0.8",
-    "babel-eslint": "^5.0.0",
-    "eslint": "^2.0.0",
+    "@lukekarrys/eslint-config": "^2.0.12",
+    "babel-eslint": "^6.0.0-beta.2",
+    "eslint": "^2.3.0",
     "eslint-plugin-classes": "^0.1.1",
-    "eslint-plugin-react": "^4.0.0-rc.1",
-    "precommit-hook": "^3.0.0"
+    "eslint-plugin-react": "^4.2.0",
+    "git-validate": "^2.1.4"
   },
   "enginges": {
     "node": "^5.0.0"
@@ -36,9 +36,8 @@
     "bundle": "npm run bundle.ios",
     "bundle.ios": "NODE_ENV=production node ./node_modules/react-native/local-cli/cli.js bundle --entry-file index.ios.js --platform ios --dev false --bundle-output ios/geohashing/main.jsbundle && NODE_ENV=production node lib/release",
     "lint": "eslint .",
-    "postinstall": "npm run rm.babelrc && npm run rm.jshint",
+    "postinstall": "npm run rm.babelrc",
     "rm.babelrc": "find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm",
-    "rm.jshint": "find . -type f -name '.jshint*' -maxdepth 1 | xargs rm",
     "start": "node lib/release && node ./node_modules/react-native/local-cli/cli.js start",
     "validate": "npm ls >/dev/null",
     "xcode": "open ./ios/geohashing.xcodeproj"
