--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,3 @@
 {
-  "extends": "@lukekarrys/eslint-config",
-
-  "rules": {
-    // https://github.com/babel/babel-eslint/issues/249
-    "no-use-before-define": 1
-  }
+  "extends": "@lukekarrys/eslint-config"
 }
