--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "react-native-button": "^1.4.2",
     "react-native-drawer": "^1.16.7",
     "react-native-geocoder": "^0.3.1",
-    "react-native-vector-icons": "^1.3.2",
+    "react-native-vector-icons": "^1.3.3",
     "react-pure-render": "^1.0.2",
-    "zero-fill": "^2.2.2"
+    "zero-fill": "^2.2.3"
   },
   "devDependencies": {
-    "@lukekarrys/eslint-config": "^2.0.16",
-    "babel-eslint": "^6.0.0-beta.6",
-    "eslint": "^2.4.0",
+    "@lukekarrys/eslint-config": "^2.0.17",
+    "babel-eslint": "^6.0.0",
+    "eslint": "^2.5.3",
     "eslint-plugin-classes": "^0.1.1",
-    "eslint-plugin-react": "^4.2.1",
+    "eslint-plugin-react": "^4.2.3",
     "git-validate": "^2.1.4"
   },
   "enginges": {
