--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "geo-graticule": "^2.0.3",
     "geohash-coordinates": "^1.1.3",
     "lodash": "^4.11.1",
-    "react-native": "^0.19.0",
+    "react": "^0.14.8",
+    "react-native": "^0.23.1",
     "react-native-blur": "^0.7.11",
     "react-native-button": "^1.4.2",
     "react-native-drawer": "^1.16.7",
