--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "description": "A geohashing app for iOS built with React Native",
   "version": "1.0.0",
   "dependencies": {
-    "geo-graticule": "^2.0.3",
-    "geohash-coordinates": "^1.1.3",
-    "lodash": "^4.11.1",
-    "react": "^0.14.8",
-    "react-native": "^0.23.1",
-    "react-native-blur": "^0.7.11",
-    "react-native-button": "^1.4.2",
-    "react-native-drawer": "^1.16.7",
-    "react-native-geocoder": "^0.3.1",
-    "react-native-vector-icons": "^1.3.4",
+    "geo-graticule": "^2.0.5",
+    "geohash-coordinates": "^1.1.6",
+    "lodash": "^4.14.2",
+    "react": "~15.2.0",
+    "react-native": "^0.31.0",
+    "react-native-blur": "^1.0.1",
+    "react-native-button": "^1.6.0",
+    "react-native-drawer": "^2.2.6",
+    "react-native-geocoder": "^0.4.4",
+    "react-native-vector-icons": "^2.0.3",
     "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.3"
   },
