--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-react": "^6.0.0",
-    "git-validate": "^2.1.4"
+    "git-validate": "^2.1.4",
+    "react-native-dismiss-keyboard": "^1.0.0"
   },
   "enginges": {
     "node": "^5.0.0"
