--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js:
   - 5
   - 6
-script: npm run lint && npm run validate
+script: npm run lint && npm run validate && npm test
