--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-react": "^6.0.0",
     "git-validate": "^2.1.4",
-    "react-native-dismiss-keyboard": "^1.0.0"
+    "react-native-dismiss-keyboard": "^1.0.0",
+    "rimraf": "^2.5.4"
   },
   "enginges": {
     "node": "^5.0.0"
@@ -36,6 +37,7 @@
   ],
   "private": true,
   "scripts": {
+    "test": "NODE_ENV=production node ./node_modules/react-native/local-cli/cli.js bundle --entry-file index.ios.js --platform ios --dev false --bundle-output ios/geohashing/main.jsbundle && rimraf ios/geohashing/main.jsbundle*",
     "lint": "eslint .",
     "start": "node ./node_modules/react-native/local-cli/cli.js start",
     "validate": "npm ls >/dev/null",
