--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A geohashing app for iOS built with React Native",
   "version": "1.0.0",
   "dependencies": {
+    "@lukekarrys/react-native-drawer": "^2.2.8",
     "geo-graticule": "^2.0.5",
     "geohash-coordinates": "^1.1.6",
     "lodash": "^4.14.2",
@@ -10,7 +11,6 @@
     "react-native": "^0.31.0",
     "react-native-blur": "^1.0.1",
     "react-native-button": "^1.6.0",
-    "react-native-drawer": "^2.2.6",
     "react-native-geocoder": "^0.4.4",
     "react-native-vector-icons": "^2.0.3",
     "react-pure-render": "^1.0.2",
