--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "description": "A geohashing app for iOS built with React Native",
   "version": "1.0.0",
   "dependencies": {
-    "@lukekarrys/react-native-drawer": "^2.2.8",
     "geo-graticule": "^2.0.5",
     "geohash-coordinates": "^1.1.6",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
     "react": "^16.0.0-alpha.6",
     "react-native": "^0.44.2",
-    "react-native-blur": "^2.0.0",
+    "react-native-blur": "^3.0.0-alpha",
     "react-native-button": "^1.8.2",
+    "react-native-drawer": "^2.3.0",
     "react-native-geocoder": "^0.4.8",
     "react-native-vector-icons": "^4.1.1",
     "react-pure-render": "^1.0.2",
