more trying to upgrade; it works; mostly

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
     compile project(':react-native-vector-icons')
     compile project(':react-native-geocoder')
     compile project(':react-native-blur')
