--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-drawer": "^2.3.0",
     "react-native-geocoder": "^0.4.8",
+    "react-native-maps": "^0.15.2",
     "react-native-vector-icons": "^4.1.1",
     "react-pure-render": "^1.0.2",
     "zero-fill": "^2.2.3"
@@ -42,8 +43,7 @@
   },
   "main": "README.md",
   "pre-commit": [
-    "lint",
-    "validate"
+    "lint"
   ],
   "private": true,
   "scripts": {
