--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 node_js:
-  - 5
   - 6
-script: npm run lint && npm run validate && npm test
+  - 7
+script: npm run lint && npm run validate && npm test && npm run test:build
