--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "geohash-coordinates": "^1.1.6",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
-    "react": "16.0.0-alpha.6",
+    "react": "16.0.0-alpha.12",
     "react-native": "^0.45.0",
-    "react-native-blur": "^3.0.0-alpha",
+    "react-native-blur": "^3.0.0",
     "react-native-button": "^2.0.0",
     "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-drawer": "^2.3.0",
     "react-native-geocoder": "^0.4.8",
     "react-native-maps": "^0.15.2",
-    "react-native-vector-icons": "^4.1.1",
+    "react-native-vector-icons": "^4.2.0",
     "zero-fill": "^2.2.3"
   },
   "devDependencies": {
     "@lukekarrys/eslint-config": "^4.0.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
-    "babel-preset-react-native": "1.9.2",
+    "babel-preset-react-native": "^2.0.0",
     "eslint": "^3.19.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-classes": "^0.1.1",
@@ -31,8 +31,8 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "git-validate": "^2.2.2",
-    "jest": "20.0.4",
-    "react-test-renderer": "16.0.0-alpha.6",
+    "jest": "^20.0.4",
+    "react-test-renderer": "16.0.0-alpha.12",
     "rimraf": "^2.6.1"
   },
   "enginges": {
