--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "^2.0.0",
+    "eslint": "^4.1.1",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-import": "^2.6.0",
