--- a/package.json
+++ b/package.json
@@ -3,33 +3,32 @@
   "description": "A geohashing app for iOS built with React Native",
   "version": "1.0.0",
   "dependencies": {
-    "fbjs": "^0.8.12",
+    "fbjs": "^0.8.14",
     "geo-graticule": "^2.0.5",
     "geohash-coordinates": "^1.1.6",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0",
-    "react-native-blur": "^3.1.1",
-    "react-native-button": "^2.0.0",
+    "react-native": "^0.47.1",
+    "react-native-blur": "^3.1.3",
+    "react-native-button": "^2.1.0",
     "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-drawer": "^2.3.0",
     "react-native-geocoder": "^0.4.8",
-    "react-native-maps": "^0.16.0",
-    "react-native-vector-icons": "^4.2.0",
+    "react-native-maps": "^0.16.2",
+    "react-native-vector-icons": "^4.3.0",
     "zero-fill": "^2.2.3"
   },
   "devDependencies": {
-    "@lukekarrys/eslint-config": "^5.1.0",
+    "@lukekarrys/eslint-config": "^5.1.1",
     "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
-    "babel-preset-react-native": "^2.0.0",
-    "eslint": "^4.1.1",
-    "eslint-plugin-babel": "^4.1.1",
+    "eslint": "^4.4.1",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-classes": "^0.1.1",
-    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.2.1",
     "git-validate": "^2.2.2",
     "jest": "^20.0.4",
     "react-test-renderer": "16.0.0-alpha.12",
@@ -55,7 +54,7 @@
     "start": "npm run cli -- start",
     "test": "jest",
     "test:build": "NODE_ENV=production npm run cli -- bundle --entry-file index.ios.js --platform ios --dev false --bundle-output build.test.js && rimraf build.test.js*",
-    "validate": "npm ls >/dev/null; echo 'TODO: fix peer deps'; exit 0",
+    "validate": "npm ls >/dev/null",
     "xcode": "open ./ios/geohashing.xcodeproj"
   }
 }
