--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@lukekarrys/eslint-config": "^5.1.1",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "21.0.2",
+    "babel-jest": "^21.0.2",
     "eslint": "^4.4.1",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-classes": "^0.1.1",
