--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "zero-fill": "^2.2.3"
   },
   "devDependencies": {
-    "@lukekarrys/eslint-config": "^5.1.1",
+    "@lukekarrys/eslint-config": "^6.0.0",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
     "eslint": "^4.4.1",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-mysticatea": "^4.2.4",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.2.1",
     "git-validate": "^2.2.2",
