--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "fbjs": "^0.8.14",
     "geo-graticule": "^2.0.5",
-    "geohash-coordinates": "^1.1.6",
+    "geohash-coordinates": "^1.1.7",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
+    "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-native-blur": "^3.1.3",
     "react-native-button": "^2.1.0",
@@ -33,7 +33,7 @@
     "eslint-plugin-react": "^7.2.1",
     "git-validate": "^2.2.2",
     "jest": "^21.0.1",
-    "react-test-renderer": "16.0.0-alpha.12",
+    "react-test-renderer": "^16.0.0-beta.5",
     "rimraf": "^2.6.1"
   },
   "enginges": {
