--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "devDependencies": {
     "@lukekarrys/eslint-config": "^6.0.4",
+    "ajv": "^5.3.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
-    "eslint": "^4.4.1",
+    "eslint": "^4.9.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-import": "^2.8.0",
